<resources>
    <string name="app_name">Palletizer</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="m1_login">M1 Login</string>
    <string name="logout">LogOut</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="want_to_log_out">Are you sure you want to log out?</string>
    <string name="log_out">Log Out?</string>
    <string name="cancel">Cancel</string>
    <string name="label">Label</string>
    <string name="setting">Setting</string>
    <string name="environment">Env:</string>
    <string name="printer">Printer</string>
    <string name="username_required">Username is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="error">Error</string>
    <string name="settings_saved">Settings Saved!</string>
    <string name="facility_code">Facility Code</string>
    <string name="number_series_type">Number Series Type</string>
    <string name="number_series">Number Series</string>
    <string name="printer_detail">Printer Detail Below:</string>
    <string name="company_number">Company #</string>
    <string name="mo">MO#:</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="length">Length</string>
    <string name="type">Type</string>
    <string name="mandatory">Mandatory</string>
    <string name="program">Program:</string>
    <string name="transaction">Transaction:</string>
    <string name="material_number_error">Material Number (MO#) is required!</string>
    <string name="quantity_error">Quantity is required!</string>
    <string name="pull_date">Pull Date</string>
    <string name="prod_date">Prod Date</string>
    <string name="uom">UOM</string>
    <string name="lot">Lot</string>
    <string name="item_number">Item Number</string>
    <string name="serial_number">Serial Number</string>
    <string name="no_print_job_error">Press Search to submit a Print Job.</string>
    <string name="print_job">Print Job</string>
    <string name="label_search">Search</string>
    <string name="exit">Exit</string>
    <string name="want_to_quit">Do you want to quit?</string>
    <string name="scan_material_number">Scan material number</string>
    <string name="no_results_found">No results found for Serial Number</string>
    <string name="label_information_not_found">Label Information not found!</string>
    <string name="number_of_cases">Number of Cases:</string>
    <string name="enter_quantity">Enter print quantity</string>
    <string name="only_numbers_allowed">Only numbers are allowed!</string>
    <string name="input_type">Input Type:</string>
    <string name="enter_number_of_labels">Enter number of labels</string>
    <string name="labels">Labels:</string>
    <string name="line">Line:</string>
    <string name="access">Access</string>
    <string name="number_of_labels_required">Number of Labels is required!</string>
    <string name="see_supervisor">Invalid password! Please see supervisor.</string>
    <string name="printer_paused">Cannot Print because the printer is paused.</string>
    <string name="printer_head_open">Cannot Print because the printer head is open.</string>
    <string name="paper_is_out">Cannot Print because the paper is out.</string>
    <string name="cannot_print">Cannot Print.</string>
    <string name="printing_label">Printing Label...</string>
    <string name="printer_ready">Printer ready!</string>
    <string name="printer_error">Printer Error</string>
    <string name="clear_printer">Clear Printer</string>
    <string name="clearing_printer_buffer">Clearing printer buffer&#8230;</string>
    <string name="want_to_clear_buffer">Do you want to clear out the print buffer?</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="enter_printer_name">Enter Printer Name</string>
    <string name="description_here">Description here</string>
    <string name="enter_number_series">Enter Number Series</string>
    <string name="enter_number_series_type">Enter Number Series Type</string>
    <string name="lines">Lines</string>
    <string name="configure_ip_address">Please configure Printer IP Address in Settings</string>
    <string name="configure_number_series">Please configure Number Series in Settings.</string>
    <string name="configure_number_series_type">Please configure Number Series Type in Settings.</string>
    <string name="print">Print</string>
    <string name="do_you_want_print_this_label">Do you want to print this label?</string>
    <string name="select_line_to_print">Select a Line to Print to:</string>
    <string name="print_option">Printer Option</string>
    <string name="contact_admin_for_printer_setup">Contact Supervisor</string>

    <string name="activity_intent_filter_action">com.dwexample.ACTION</string>
    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
    <string name="datawedge_intent_key_source_legacy">com.motorolasolutions.emdk.datawedge.source</string>
    <string name="datawedge_intent_key_label_type_legacy">com.motorolasolutions.emdk.datawedge.label_type</string>
    <string name="datawedge_intent_key_data_legacy">com.motorolasolutions.emdk.datawedge.data_string</string>
</resources>
